--- a/tests/Behat/Resources/suites.yml
+++ b/tests/Behat/Resources/suites.yml
@@ -4,7 +4,8 @@ default:
     suites:
         greeting_customer:
             contexts:
-                - acme_sylius_example.context.ui.shop.welcome
+#                - acme_sylius_example.context.ui.shop.welcome
+            
 
             filters:
-                tags: "@greeting_customer"
+#                tags: "@greeting_customer"
