[UC-3] Use trait in channel & override mapping

--- a/tests/Application/config/packages/_sylius.yaml
+++ b/tests/Application/config/packages/_sylius.yaml
@@ -16,3 +16,9 @@ sylius_shop:
 
 sylius_api:
     enabled: true
+
+sylius_channel:
+    resources:
+        channel:
+            classes:
+                model: Tests\BitBag\SyliusUserComPlugin\Entity\Channel
