--- a/tests/Application/config/packages/dev/monolog.yaml
+++ b/tests/Application/config/packages/dev/monolog.yaml
@@ -4,6 +4,10 @@ monolog:
             type: stream
             path: "%kernel.logs_dir%/%kernel.environment%.log"
             level: debug
+        console:
+            type: stream
+            path: "%kernel.logs_dir%/%kernel.environment%.console.log"
+            level: error
         firephp:
             type: firephp
             level: info
