--- a/tests/Application/config/packages/_sylius.yaml
+++ b/tests/Application/config/packages/_sylius.yaml
@@ -22,3 +22,9 @@ sylius_channel:
         channel:
             classes:
                 model: Tests\BitBag\SyliusUserComPlugin\Entity\Channel
+
+sylius_customer:
+    resources:
+        customer:
+            classes:
+                model: Tests\BitBag\SyliusUserComPlugin\Entity\Customer
