[UC-4] Add changes requested on CR

--- a/tests/Application/.env
+++ b/tests/Application/.env
@@ -33,5 +33,5 @@ SYLIUS_MESSENGER_TRANSPORT_CATALOG_PROMOTION_REMOVAL_FAILED_DSN=doctrine://defau
 ###< symfony/messenger ###
 
 ###> UserCom
-USER_COM_FRONTEND_API_KEY="vatusy"
+USER_COM_FRONTEND_API_KEY=""
 ###< UserCom
