Add agreements endpoint

--- a/config/shop_routing.yml
+++ b/config/shop_routing.yml
@@ -1,1 +1,5 @@
 # Delete these routes and define your own shop routes here
+bitbag_user_com_customer_agreements_endpoint:
+    path: /user-com/customer-agreements
+    controller: bit_bag.sylius_user_com_plugin.controller.user_com_agreements_controller
+    methods: [POST]
