Add spinbits plugin

--- a/tests/Application/config/services.yaml
+++ b/tests/Application/config/services.yaml
@@ -1,5 +1,9 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
+
+spinbits_sylius_google_analytics4:
+    id: '%env(TAG_MANAGER_ID)%'
+
 parameters:
     locale: en_US
 
