--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,18 @@
     "keywords": ["sylius", "sylius-plugin"],
     "description": "Integration with User.com for Sylius.",
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/BitBagCommerce/sylius-google-analytics-plugin.git"
+        }
+    ],
     "require": {
         "php": "^8.1",
         "bitbag/coding-standard": "^3.0",
         "sylius/sylius": "~1.13.0",
-        "symfony/webpack-encore-bundle": "^1.15"
+        "symfony/webpack-encore-bundle": "^1.15",
+        "spinbits/google-analytics-4-plugin": "dev-test/bump-sylius-version"
     },
     "require-dev": {
         "behat/behat": "^3.6.1",
