--- a/tests/Application/.env
+++ b/tests/Application/.env
@@ -34,4 +34,5 @@ SYLIUS_MESSENGER_TRANSPORT_CATALOG_PROMOTION_REMOVAL_FAILED_DSN=doctrine://defau
 
 ###> UserCom
 USER_COM_FRONTEND_API_KEY=""
+TAG_MANAGER_ID=""
 ###< UserCom
