--- a/tests/Application/config/routes.yaml
+++ b/tests/Application/config/routes.yaml
@@ -1,7 +1,2 @@
-bitbag_sylius_user_com_shop:
-    resource: "@BitBagSyliusUserComPlugin/config/shop_routing.yml"
-    prefix: /
-
-bitbag_sylius_user_com_admin:
-    resource: "@BitBagSyliusUserComPlugin/config/admin_routing.yml"
-    prefix: /admin
+bitbag_sylius_user_com:
+    resource: "@BitBagSyliusUserComPlugin/config/routes.yaml"
