--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,12 @@
     "require": {
         "php": "^8.1",
         "bitbag/coding-standard": "^3.0",
+        "bitbag/google-analytics-4-plugin": "^1.0",
         "sylius/sylius": "~1.13.0",
+        "symfony/messenger": "^5.4 || ^6.4",
         "symfony/webpack-encore-bundle": "^1.15",
-        "bitbag/google-analytics-4-plugin": "^1.0"
+        "ext-openssl": "*",
+        "bitbag/sylius-feed-plugin": "~0.2"
     },
     "require-dev": {
         "behat/behat": "^3.6.1",
@@ -34,6 +37,7 @@
         "phpunit/phpunit": "^10.5",
         "polishsymfonycommunity/symfony-mocker-container": "^1.0",
         "robertfausk/behat-panther-extension": "^1.1",
+        "setono/sylius-feed-plugin": "dev-master",
         "sylius-labs/coding-standard": "^4.2",
         "sylius-labs/suite-tags-extension": "^0.2",
         "symfony/browser-kit": "^5.4 || ^6.4",
