--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,4 +1,6 @@
-# Delete these routes and define your own shop routes here
+setono_sylius_feed:
+    resource: "@SetonoSyliusFeedPlugin/Resources/config/routing.yaml"
+
 bitbag_user_com_customer_agreements_endpoint:
     path: /user-com/customer-agreements
     controller: bit_bag.sylius_user_com_plugin.controller.user_com_agreements_controller
