--- a/tests/Application/.env
+++ b/tests/Application/.env
@@ -35,4 +35,6 @@ SYLIUS_MESSENGER_TRANSPORT_CATALOG_PROMOTION_REMOVAL_FAILED_DSN=doctrine://defau
 ###> UserCom
 USER_COM_FRONTEND_API_KEY=""
 TAG_MANAGER_ID=""
+USER_COM_ENCRYPTION_KEY=your-32-character-long-key
+USER_COM_ENCRYPTION_IV=your-16-character-long-iv
 ###< UserCom
