--- a/config/state_machine/order.yaml
+++ b/config/state_machine/order.yaml
@@ -8,5 +8,5 @@ winzou_state_machine:
             after:
                 order_user_com_update:
                     on: ['create', 'cancel', 'fulfill']
-                    do: ['@bit_bag.sylius_user_com_plugin.handler.order_state_update_handler', 'handle']
+                    do: ['@bit_bag.sylius_user_com_plugin.dispatcher.order_message_dispatcher', 'dispatch']
                     args: ['object']
