--- a/tests/Application/config/packages/dev/monolog.yaml
+++ b/tests/Application/config/packages/dev/monolog.yaml
@@ -7,3 +7,8 @@ monolog:
         firephp:
             type: firephp
             level: info
+        user_com:
+            type: stream
+            path: "%kernel.logs_dir%/%kernel.environment%.user_com.log"
+            level: debug
+            channels: ["user_com", "messenger"]
