Add customer payload as first script and adjust documentation

--- a/tests/Application/config/packages/_sylius.yaml
+++ b/tests/Application/config/packages/_sylius.yaml
@@ -24,3 +24,8 @@ sylius_channel:
         channel:
             classes:
                 model: Tests\BitBag\SyliusUserComPlugin\Entity\Channel
+
+spinbits_sylius_google_analytics4:
+    id: "%env(TAG_MANAGER_ID)%"
+    templateName: "@BitBagSyliusUserComPlugin/_userComScripts.html.twig"
+    enabled: true
