Add missing env param and extend docs

--- a/tests/Application/.env
+++ b/tests/Application/.env
@@ -36,5 +36,6 @@ SYLIUS_MESSENGER_TRANSPORT_CATALOG_PROMOTION_REMOVAL_FAILED_DSN=doctrine://defau
 USER_COM_FRONTEND_API_KEY=""
 TAG_MANAGER_ID=""
 USER_COM_ENCRYPTION_KEY=your-32-character-long-key
-USER_COM_ENCRYPTION_IV=your-16-character-long-iv
+USER_COM_ENCRYPTION_IV=your-16-character-long-
+MESSENGER_USER_COM_ASYNCHRONOUS=""
 ###< UserCom
