--- a/tests/Application/.env
+++ b/tests/Application/.env
@@ -37,5 +37,5 @@ USER_COM_FRONTEND_API_KEY=""
 TAG_MANAGER_ID=""
 USER_COM_ENCRYPTION_KEY=your-32-character-long-key
 USER_COM_ENCRYPTION_IV=your-16-character-long-
-MESSENGER_USER_COM_ASYNCHRONOUS=""
+MESSENGER_USER_COM_ASYNCHRONOUS="amqp://guest:guest@localhost:5672/%2f"
 ###< UserCom
