--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "symfony/messenger": "^5.4 || ^6.4",
         "symfony/webpack-encore-bundle": "^1.15",
         "ext-openssl": "*",
-        "bitbag/sylius-feed-plugin": "~0.2"
+        "bitbag/sylius-feed-plugin": "~0.2",
+        "symfony/amqp-messenger": "^5.4 || ^6.4 || ^7.0"
     },
     "require-dev": {
         "behat/behat": "^3.6.1",
