Add GTM config to admin panel and remove google analytics invalid naming convention

--- a/tests/Application/config/packages/_sylius.yaml
+++ b/tests/Application/config/packages/_sylius.yaml
@@ -26,6 +26,5 @@ sylius_channel:
                 model: Tests\BitBag\SyliusUserComPlugin\Entity\Channel
 
 spinbits_sylius_google_analytics4:
-    id: "%env(TAG_MANAGER_ID)%"
-    templateName: "@BitBagSyliusUserComPlugin/_userComScripts.html.twig"
+    id: "%env(GOOGLE_ANALYTICS_TAG)%"
     enabled: true
