--- a/config/events.yaml
+++ b/config/events.yaml
@@ -5,3 +5,13 @@ sylius_ui:
                 user_com_configuration:
                     template: '@BitBagSyliusUserComPlugin/UserApiResource/_userComCredentials.html.twig'
                     priority: 25
+        sylius.shop.layout.before_body:
+            blocks:
+                user_com_gtm:
+                    template: '@BitBagSyliusUserComPlugin/Scripts/_userComGTM.html.twig'
+                    priority: 0
+        sylius.shop.layout.stylesheets:
+            blocks:
+                user_com_scripts:
+                    template: '@BitBagSyliusUserComPlugin/Scripts/_userComScripts.html.twig'
+                    priority: 0
