--- a/tests/Application/.env
+++ b/tests/Application/.env
@@ -34,7 +34,7 @@ SYLIUS_MESSENGER_TRANSPORT_CATALOG_PROMOTION_REMOVAL_FAILED_DSN=doctrine://defau
 
 ###> UserCom
 USER_COM_FRONTEND_API_KEY=""
-TAG_MANAGER_ID=""
+GOOGLE_ANALYTICS_TAG=""
 USER_COM_ENCRYPTION_KEY=your-32-character-long-key
 USER_COM_ENCRYPTION_IV=your-16-character-long-
 MESSENGER_USER_COM_ASYNCHRONOUS="doctrine://default"
