--- a/composer.json
+++ b/composer.json
@@ -6,18 +6,17 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "bitbag/coding-standard": "^3.0",
-        "bitbag/google-analytics-4-plugin": "^1.0",
-        "sylius/sylius": "~1.13.0",
-        "symfony/messenger": "^5.4 || ^6.4",
-        "symfony/webpack-encore-bundle": "^1.15",
-        "ext-openssl": "*",
         "bitbag/sylius-feed-plugin": "~0.2",
-        "symfony/amqp-messenger": "^5.4 || ^6.4 || ^7.0"
+        "ext-openssl": "*",
+        "sylius/sylius": "~1.13.0",
+        "symfony/amqp-messenger": "^5.4 || ^6.4 || ^7.0",
+        "symfony/messenger": "^5.4 || ^6.4",
+        "symfony/webpack-encore-bundle": "^1.15"
     },
     "require-dev": {
         "behat/behat": "^3.6.1",
         "behat/mink-selenium2-driver": "^1.4",
+        "bitbag/coding-standard": "^3.0",
         "dbrekelmans/bdi": "^1.1",
         "dmore/behat-chrome-extension": "^1.3",
         "dmore/chrome-mink-driver": "^2.7",
