--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
             fail-fast: false
             matrix:
                 php: ["8.1", "8.2", "8.3"]
+                sylius: ["~1.13.0", "~1.14.0"]
                 symfony: ["^5.4", "^6.4"]
                 node: ["20.x"]
                 mysql: ["8.0"]
