--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": "^8.1",
         "bitbag/coding-standard": "^3.0",
         "bitbag/google-analytics-4-plugin": "^1.0",
-        "sylius/sylius": "~1.13.0",
+        "sylius/sylius": "~1.13.0 || ~1.14.0",
         "symfony/messenger": "^5.4 || ^6.4",
         "symfony/webpack-encore-bundle": "^1.15",
         "ext-openssl": "*",
