--- a/tests/Application/config/packages/test_cached/mailer.yaml
+++ b/tests/Application/config/packages/test_cached/mailer.yaml
@@ -1,2 +1,5 @@
-imports:
-    - { resource: "../test/mailer.yaml" }
+framework:
+    cache:
+        pools:
+            test.mailer_pool:
+                adapter: cache.adapter.filesystem
