--- a/tests/Application/.env
+++ b/tests/Application/.env
@@ -36,5 +36,6 @@ SYLIUS_MESSENGER_TRANSPORT_CATALOG_PROMOTION_REMOVAL_FAILED_DSN=doctrine://defau
 USER_COM_FRONTEND_API_KEY=""
 USER_COM_ENCRYPTION_KEY=your-32-character-long-key
 USER_COM_ENCRYPTION_IV=your-16-character-long-
+USER_COM_COOKIE_DOMAIN=""
 MESSENGER_USER_COM_ASYNCHRONOUS_DSN="doctrine://default"
 ###< UserCom
